<resources>
    <string name="app_name">MYMA</string>
    <string name="find_your_perfect_domain_idn">Find Your Perfect Domain / IDN</string>
    <string name="search_here">Search Here ex.domain</string>
    <string name="host_name_placeholder">Enter host name ex.www,mail.com etc.</string>
    <string name="search_here_who_is">Search Here ex:test.com</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="order_by">Order By</string>
    <string name="username">Username</string>
    <string name="usernameoremail">Username or Email</string>
    <string name="sign_in">Sign in</string>
    <string name="create_one">
        <u>Create new</u>
    </string>
    <string name="i_don_t_have_account_yet">I don\'t have account yet.</string>
    <string name="sign_up">Sign up</string>
    <string name="email_address">Email Address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="have_an_account">Already have a account?</string>
    <string name="OpenSansBold">fonts/OpenSans-Bold.ttf</string>
    <string name="OpenSansRegular">fonts/OpenSans-Regular.ttf</string>
    <string name="OpenSansLight">fonts/OpenSans-Light.ttf</string>
    <string name="OpenSansSemiBold">fonts/OpenSans-Semibold.ttf</string>
    <string name="email_id_phone_number">Email ID/ Phone Number</string>
    <string name="get_otp">get otp</string>
    <string name="placeholder_raj_kumar">Raj Kumar</string>
    <string name="placeholder_email">rajkumar1@dil.in</string>
    <string name="register">Register</string>
    <string name="manage_your_domain">Manage your Domain</string>
    <string name="who_is">Who is</string>
    <string name="who_is_detail">Who Is Detail</string>
    <string name="order_summary">Order Summary</string>
    <string name="cart">Cart</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="session_invalid">Session is not valid</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="domain_name">Domain Name:</string>
    <string name="idn">IDN:</string>
    <string name="name">Name:</string>
    <string name="organization">Organization:</string>
    <string name="city">City:</string>
    <string name="state">State:</string>
    <string name="postal_code">Postal Code:</string>
    <string name="country">Country:</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="full_name">Full Name:</string>
    <string name="address_hint">Address:</string>
    <string name="phone">Phone:</string>
    <string name="email_hint">Email:</string>
    <string name="add_address">Add Address</string>
    <string name="zip">Zip:</string>
    <string name="no_address_message">You don\'t have any address information</string>
    <string name="no_payment_method_message">You don\'t have any payment profile</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="continue_str">Continue</string>
    <string name="change_now">Change Now</string>
    <string name="current_password">Current Password:</string>
    <string name="confirm_password_hint">Confirm Password:</string>
    <string name="billing_address">Billing Address</string>
    <string name="host_name">Host Name</string>
    <string name="record_type">Record Type</string>
    <string name="priority">Priority</string>
    <string name="value">Value</string>
    <string name="save">Save</string>
    <string name="name_server2">Name Server2</string>
    <string name="name_server1">Name Server1</string>
    <string name="edit_address">Edit Address</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="mobile_number_short">Mobile number not be less than 10 digits.</string>
    <string name="select_domain">Select Domain</string>
    <string name="renewal_charge_per_year">Renewal Charge per Year</string>
    <string name="amount">Amount</string>
    <string name="gst">GST(18 %)</string>
    <string name="wallet_amount">Wallet Amount</string>
    <string name="payable_amount">Payable Amount(With GST):</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="indian">Indian</string>
    <string name="non_indian">Non Indian</string>
    <string name="pay_now">Pay Now</string>
    <string name="search_a_domain_name">Search a Domain Name</string>
    <string name="search">Search</string>
    <string name="to_continue_your_purchase">To Continue your purchase we need your address. We can change it anytime
        later.
    </string>
    <string name="device_offline_message">No Internet Connection found.</string>
    <string name="password_empty_message">password is empty</string>
    <string name="password_short_message">Password is smaller than minimum length</string>
    <string name="password_invalid_message">Password must be of min 8 char long in length with 1 digit(0-9) and 1
        special character (!@#$%^&amp;*+=_)
    </string>
    <string name="login_failed_message">Login failed. Try again.</string>
    <string name="idn_failed_message">IDN failed. Try again.</string>
    <string name="username_empty_message">username is empty</string>
    <string name="checkdomain_empty_message">Please insert menuDataPojo to search</string>
    <string name="checklanguage_select_message">Select Language</string>
    <string name="select_idn_suffix">Select domain suffix</string>
    <string name="usename_not_valid_message">Username is not valid</string>
    <string name="email_empty_message">Email is empty</string>
    <string name="domain_empty_message">Domain name is empty</string>
    <string name="email_invalid_message">Email is invalid</string>
    <string name="domain_invalid_message">Domain is invalid</string>
    <string name="first_name_empty_message">First name is empty</string>
    <string name="last_name_empty_message">Last name is empty</string>
    <string name="mobile_empty_message">Mobile number cannot be empty</string>
    <string name="confirm_password_empty_message">confirm password is empty</string>
    <string name="signup_failed_message">signup failed</string>
    <string name="password_not_match_message">Passwords doesn\'t match</string>
    <string name="OTP_not_match_message">OTP doesn\'t match</string>
    <string name="check_availability">Check Availability</string>
    <string name="register_domain_and_get_free_email_id">Register domain and get free email Id..</string>
    <string name="get_password">Get password</string>
    <string name="renew_domain">Renew Domain</string>
    <string name="dns_records">DNS Records</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="password_reset_failed">Password reset failed</string>
    <string name="press_back_again">Please click Back again to exit</string>
    <string name="name_server_1_blank">Name Server1 is blank</string>
    <string name="name_server_2_blank">Name Server2 is blank</string>
    <string name="my_cart">Cart</string>
    <string name="update_nameserver">Update Nameserver</string>
    <string name="update_contact_info">Update Contact Info</string>
    <string name="nameserver_error">NameServer retrieve failed</string>
    <string name="contact_info_failed">Contact Info retrieve failed</string>
    <string name="domain_name_empty">Domain Name is empty</string>
    <string name="organization_empty_message">Organization is empty</string>
    <string name="phone_number_empty_message">Phone number is empty</string>
    <string name="dial_code_empty_message">Dialing code is empty</string>
    <string name="country_code_invalid">Country code is invalid</string>
    <string name="country_code_emtpy_message">Country code is empty</string>
    <string name="postal_code_empty_message">Postal code is empty</string>
    <string name="state_empty_message">State is empty</string>
    <string name="city_empty_message">City is empty</string>
    <string name="street_empty_message">Street is empty</string>
    <string name="client_name_emtpy_message">Client name is empty</string>
    <string name="dial_code_invalid">Dialing code is invalid</string>
    <string name="dns_record_insertion_failed">Dns record insertion failed</string>
    <string name="dns_record_insert_success">Dns record inserted</string>
    <string name="dns_record_update_success">Dns record updated successfully</string>
    <string name="dns_record_update_failed">DNS record update failed</string>
    <string name="choose_dns_record_type">Choose DNS Record Type</string>
    <string name="alert">Alert</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_record">Add Record</string>
    <string name="are_yout_logout">Are you sure you want to logout?</string>
    <string name="are_you_sure_delete_file">Are you sure you want to delete this file?</string>
    <string name="session_invalid_string">It seems your session is not valid, Please Login again</string>
    <string name="host_name_empty">Host name is empty</string>
    <string name="record_type_not_selected">Record type is not selected</string>
    <string name="priority_empty">Priority is empty</string>
    <string name="priority_invalid">Priority value is not valid. Choose value between 1 - 100</string>
    <string name="value_empty">Value is empty</string>
    <string name="update_name_server">Update Name Server</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="type_placeholder">Type : %s</string>
    <string name="value_placeholder">Value : %s</string>
    <string name="priority_placeholder">Priority : %s</string>
    <string name="ok">Ok</string>
    <string name="dns_record_in_progress">DNS Record already in process</string>
    <string name="new_password_empty">New password is empty</string>
    <string name="old_password_empty">Current password is empty</string>
    <string name="old_password_not_matched">Current password not matched</string>
    <string name="password_change_success">Password changed Successfully</string>
    <string name="next">Next</string>
    <string name="cooking_self_delivery">Cooking + Self Delivery</string>
    <string name="my_orders">My Orders</string>
    <string name="bicycle">Bicycle</string>
    <string name="bike">Bike</string>
    <string name="driving_lic">Driving License</string>
    <string name="bike_rc">Bike RC</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="deliverly_area_limit">Deliverly area limit</string>
    <string name="area_limit1">0"-"1 km</string>
    <string name="area_limit2">0"-"3 km</string>
    <string name="area_limit3">0"-"5 km</string>
    <string name="upload_below_document">Upload below document</string>
    <string name="area_limit4">5+ km</string>
    <string name="pan_card">Pan Card</string>
    <string name="aadhar_card">Aadhar Card</string>
    <string name="language">Language</string>
    <string name="Marathi">Marathi</string>
    <string name="inform_email">info@mymameals.com</string>
    <string name="english">English</string>
    <string name="Hindi">Hindi</string>
    <string name="contact_myma">Contact Myma</string>
    <string name="write_us_at">Write to us at</string>
    <string name="default_num">9881717342</string>
    <string name="input_your_mobile">Input your mobile number for call back</string>
    <string name="request_a_call_back">Request a call back</string>
    <string name="missed">Missed</string>
    <string name="completed">Completed</string>
    <string name="pending">Pending</string>
</resources>