<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:layout_margin="@dimen/val_14dp"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_orders"
            android:textSize="@dimen/val_textView_30sp"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/colorOrange"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">
        <Button
                android:id="@+id/btnTabPending"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp40"
                android:layout_weight="1"
                android:background="@color/green"
                android:text="@string/pending"
                android:fontFamily="@font/montserrat_medium"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"/>
        <Button
                android:id="@+id/btnTabCompleted"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp40"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_medium"
                android:background="@color/colorLightGrey"
                android:text="@string/completed"
                android:textColor="@color/colorGrey"
                android:textAllCaps="false"/>

        <Button
                android:id="@+id/btnTabMissed"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp40"
                android:layout_weight="1"
                android:background="@color/colorLightGrey"
                android:text="@string/missed"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/colorGrey"
                android:textAllCaps="false"/>
    </LinearLayout>

    <FrameLayout
            android:id="@+id/frameFragment"
            android:layout_width="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_height="match_parent"
    >

    </FrameLayout>
</LinearLayout>