<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:fillViewport="true"
            android:scrollbars="none"
            android:layout_margin="16dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/language"
                android:textColor="@color/colorOrange"
                android:layout_marginTop="@dimen/val_8dp"
                android:textSize="30sp"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:background="@drawable/bg_round_border_grey"
                android:fontFamily="@font/montserrat_medium"
                android:paddingTop="10dp"
                android:textAllCaps="false"
                android:paddingBottom="10dp"
                android:text="@string/Marathi"
                android:layout_marginTop="@dimen/val_30dp"
                android:textColor="@color/colorGrey"
                android:textSize="14sp"/>


        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:background="@drawable/bg_round_fill_green"
                android:fontFamily="@font/montserrat_medium"
                android:paddingTop="10dp"
                android:textAllCaps="false"
                android:paddingBottom="10dp"
                android:text="@string/english"
                android:layout_marginTop="@dimen/val_30dp"
                android:textColor="@color/white"
                android:textSize="14sp"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:background="@drawable/bg_round_border_grey"
                android:fontFamily="@font/montserrat_medium"
                android:paddingTop="10dp"
                android:textAllCaps="false"
                android:paddingBottom="10dp"
                android:text="@string/Hindi"
                android:layout_marginTop="@dimen/val_16dp"
                android:textColor="@color/colorGrey"
                android:textSize="14sp"/>

    </LinearLayout>
</ScrollView>